Bug 1290318 - listen to "cacheservice:empty-cache" to clear media cache. r=mayhemer

MozReview-Commit-ID: 7t4FPCxOUYl

--HG--
extra : rebase_source : 3c10840d2559e7fb2db47cbb3c439a7a8ddc5792