dom/ipc/ContentChild.h
@@ -369,6 +369,8 @@ public:
 
   virtual bool RecvNotifyGMPsChanged() override;
 
+  virtual bool RecvNotifyEmptyHTTPCache() override;
+
   virtual PSpeechSynthesisChild* AllocPSpeechSynthesisChild() override;
 
   virtual bool DeallocPSpeechSynthesisChild(PSpeechSynthesisChild* aActor) override;
